--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@yanglee2421/scss": "^0.0.3",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "sass": "^1.62.1"
   }
 }
