--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@tanstack/react-query": "4.29.7",
+    "axios": "1.4.0",
     "clsx": "1.2.1",
     "next": "latest",
     "react": "18.2.0",
