--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-redux": "^8.0.7",
     "redux-persist": "^6.0.0"
   },
